# twig

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml  mise.toml  release-plz.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-build.yml  release-drafter.yml  release-plz.yml
src/: debug_log.rs  git.rs  gum.rs  main.rs  tmux.rs  tmux_control.rs  ui.rs
src/cli/: delete.rs  edit.rs  kill.rs  list.rs  mod.rs  new.rs  project.rs  start.rs  stop.rs  tree_view.rs  window.rs  worktree.rs
src/config/: global.rs  mod.rs  project.rs
