[package]
name = "twig"
version = "0.1.0"
edition = "2021"
description = "Tmux session manager with git worktree support"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3"
dirs = "5"
anyhow = "1"
