[package]
name = "twig"
version = "0.1.2"
edition = "2021"
description = "Tmux session manager with git worktree support"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
shellexpand = "3"
dirs = "5"
anyhow = "1"
regex = "1"
once_cell = "1"

# TUI
ratatui = "0.26"
crossterm = "0.27"
tui-tree-widget = "0.20"
fuzzy-matcher = "0.3"
